Extract Order for shipping